infra/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-medfast
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:  
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: medfast-backend-service
              port:
                number: 8080
        - path: /auth
          pathType: Prefix
          backend:
            service:
              name: medfast-backend-service
              port:
                number: 8080
        - path: /
          pathType: Prefix
          backend:
            service:
              name: medfast-frontend-service
              port:
                number: 80
